--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -18,7 +18,7 @@
             </Setter.Value>
         </Setter>
         <Setter Property="IsTabStop" Value="False" />
-        <Setter Property="Template" Value="{StaticResource HamburgerMenuNavViewTemplate}">
+        <Setter Property="Template" Value="{StaticResource HamburgerMenuTemplate}">
         </Setter>
     </Style>
 </ResourceDictionary>
