--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ConnectedAnimations/Pages/FirstPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ConnectedAnimations/Pages/FirstPage.xaml
@@ -10,8 +10,8 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-        <TextBlock>This is the first page, need to add description</TextBlock>
+        <TextBlock>This is the first page, need to add description. Tap the box</TextBlock>
 
-        <Border Height="100" Width="100" Background="Purple" VerticalAlignment="Center" HorizontalAlignment="Center" animations:Connected.Key="item"></Border>
+        <Border Height="100" Width="100" Background="Purple" VerticalAlignment="Center" HorizontalAlignment="Center" animations:Connected.Key="item" Tapped="Border_Tapped"></Border>
     </Grid>
 </Page>
