--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Connected Animations/Pages/FirstPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Connected Animations/Pages/FirstPage.xaml
@@ -2,7 +2,6 @@
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ConnectedAnimations.Pages.FirstPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ConnectedAnimations.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
@@ -12,6 +11,12 @@
 
         <TextBlock>This is the first page, need to add description. Tap the box</TextBlock>
 
-        <Border Height="100" Width="100" Background="Purple" VerticalAlignment="Center" HorizontalAlignment="Center" animations:Connected.Key="item" Tapped="Border_Tapped"></Border>
+        <Border Height="100" 
+                Width="100" 
+                Background="Purple" 
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Center" 
+                animations:Connected.Key="item" 
+                Tapped="Border_Tapped"></Border>
     </Grid>
 </Page>
