--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Connected Animations/Pages/FirstPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Connected Animations/Pages/FirstPage.xaml
@@ -7,9 +7,9 @@
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="20">
 
-        <TextBlock>This is the first page, need to add description. Tap the box</TextBlock>
+        <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center">This is the first page, Click/Tap the box to navigate to the next page</TextBlock>
 
         <Border Height="100" 
                 Width="100" 
