--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
@@ -78,9 +78,19 @@
                                     Grid.Row="1"
                                     Margin="24,24,24,21"
                                     Orientation="Vertical">
-                            <TextBox x:Name="ClientId"
-                                     Margin="0,0,0,12"
-                                     Header="Client Id:" />
+                            <Grid Margin="0,0,0,12">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox x:Name="ClientId" Header="Client Id:" />
+                                <ComboBox x:Name="VersionEndpointDropdown" Header="Endpoint Version" Grid.Column="1">
+                                    <ComboBox.Items>
+                                        <ComboBoxItem Tag="v1" Content="v1 - ADAL (default)" IsSelected="True" />
+                                        <ComboBoxItem Tag="v2" Content="v2 - MSAL" />
+                                    </ComboBox.Items>
+                                </ComboBox>
+                            </Grid>
                             <HyperlinkButton Margin="0,0,0,15"
                                              Content="Show me how to get this ID"
                                              NavigateUri="http://uwpcommunitytoolkit.com/en/master/services/MicrosoftGraph/" />
