--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HeaderedContentControl/HeaderedContentControlPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HeaderedContentControl/HeaderedContentControlPage.xaml
@@ -1,15 +1,13 @@
 ﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.HeaderedItemsControlPage"
+    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.HeaderedContentControlPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.HeaderedItemsControl"
+    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.HeaderedContentControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d">
 
-    <Grid Visibility="Collapsed">
-        <controls:DockPanel />
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
     </Grid>
-    
 </Page>
