change shallow copy control

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HeaderedItemsControl/HeaderedItemsControlPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HeaderedItemsControl/HeaderedItemsControlPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d">
 
     <Grid Visibility="Collapsed">
-        <controls:DockPanel />
+        <controls:HeaderedItemsControl />
     </Grid>
     
 </Page>
