--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Visual Extensions/VisualExtensionsPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Visual Extensions/VisualExtensionsPage.xaml
@@ -16,7 +16,7 @@
                 extensions:VisualEx.Opacity="0.5"
                 extensions:VisualEx.RotationAngleInDegrees="80"
                 extensions:VisualEx.Scale="2, 0.5, 1"
-                extensions:VisualEx.KeepCenterPointCentered="True"
+                extensions:VisualEx.NormalizedCenterPoint="0.5"
                 />
     </Grid>
 </Page>
